--- a/ConstMvcLerning/packages.config
+++ b/ConstMvcLerning/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net471" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net471" />
   <package id="bootstrap" version="4.2.1" targetFramework="net471" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.0.0" targetFramework="net471" />
   <package id="jQuery" version="3.3.1" targetFramework="net471" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net471" />
+  <package id="JSPool" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Mvc.ja" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net471" />
@@ -19,6 +22,10 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="popper.js" version="1.14.3" targetFramework="net471" />
+  <package id="React.Core" version="4.0.0" targetFramework="net471" />
+  <package id="React.Web" version="4.0.0" targetFramework="net471" />
+  <package id="React.Web.Mvc4" version="4.0.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net471" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
 </packages>
